--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,24 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
     providers:
-        users_in_memory: { memory: null }
+        users_in_memory:
+          memory:
+              users: 
+                  john_admin: { password: '123456', roles: [ 'ROLE_ADMIN' ] }
+                  john_user: { password: '123456', roles: [ 'ROLE_USER' ] }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            pattern: ^/          
+            http_basic:
+                realm: 'Secured API'
+                provider: users_in_memory
+            guard: false
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -18,6 +28,6 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
-    access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+    access_control:          
+        - # this line mistake makes the normal user able to access the /admin route 
+        - { path: ^/admin, roles: ROLE_ADMIN }
